--- a/package.json
+++ b/package.json
@@ -42,26 +42,26 @@
     "!*/__tests__"
   ],
   "dependencies": {
-    "@loopback/boot": "^1.4.3",
-    "@loopback/context": "^1.20.1",
-    "@loopback/core": "^1.8.4",
-    "@loopback/openapi-v3": "^1.6.4",
-    "@loopback/repository": "^1.8.1",
-    "@loopback/rest": "^1.16.2",
-    "@loopback/rest-explorer": "^1.2.4",
-    "@loopback/service-proxy": "^1.2.4"
+    "@loopback/boot": "^1.4.4",
+    "@loopback/context": "^1.20.2",
+    "@loopback/core": "^1.8.5",
+    "@loopback/openapi-v3": "^1.7.0",
+    "@loopback/repository": "^1.8.2",
+    "@loopback/rest": "^1.16.3",
+    "@loopback/rest-explorer": "^1.2.5",
+    "@loopback/service-proxy": "^1.2.5"
   },
   "devDependencies": {
-    "@loopback/build": "^2.0.2",
-    "@loopback/testlab": "^1.6.2",
-    "@types/node": "^10.14.9",
-    "@typescript-eslint/parser": "^1.10.2",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@loopback/eslint-config": "^1.1.2",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^5.0.0",
+    "@loopback/build": "^2.0.3",
+    "@loopback/eslint-config": "^2.0.0",
+    "@loopback/testlab": "^1.6.3",
+    "@types/node": "^12.6.2",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-eslint-plugin": "^2.1.0",
     "eslint-plugin-mocha": "^5.3.0",
-    "typescript": "~3.5.2"
+    "typescript": "^3.5.3"
   }
 }
