--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hrservice",
   "version": "1.0.0",
+  "description": "This is my hr service project",
   "installConfig": {
     "pnp": false
   },
-  "description": "HR Service",
   "keywords": [
     "loopback-application",
     "loopback"
@@ -25,10 +25,12 @@
     "eslint": "lb-eslint --report-unused-disable-directives .",
     "eslint:fix": "npm run eslint -- --fix",
     "pretest": "npm run clean && npm run build",
+    "test": "lb-mocha --allow-console-logs \"dist/__tests__\"",
     "posttest": "npm run lint",
+    "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
     "migrate": "node ./dist/migrate",
     "prestart": "npm run build",
-    "start": "node .",
+    "start": "node -r source-map-support/register .",
     "prepublishOnly": "npm run test"
   },
   "repository": {
@@ -45,26 +47,27 @@
     "!*/__tests__"
   ],
   "dependencies": {
-    "@loopback/boot": "^1.5.12",
-    "@loopback/context": "^1.24.0",
-    "@loopback/core": "^1.11.0",
-    "@loopback/openapi-v3": "^1.10.2",
-    "@loopback/repository": "^1.15.5",
-    "@loopback/rest": "^1.24.0",
-    "@loopback/rest-explorer": "^1.4.5",
-    "@loopback/service-proxy": "^1.3.12"
+    "@loopback/boot": "^1.7.4",
+    "@loopback/context": "^2.1.1",
+    "@loopback/core": "^1.12.4",
+    "@loopback/openapi-v3": "^2.0.0",
+    "@loopback/repository": "^1.19.1",
+    "@loopback/rest": "^2.0.0",
+    "@loopback/rest-explorer": "^1.4.10",
+    "@loopback/service-proxy": "^1.3.17"
   },
   "devDependencies": {
-    "@loopback/build": "^2.1.0",
-    "@loopback/eslint-config": "^4.1.5",
-    "@loopback/testlab": "^1.9.5",
-    "@types/node": "^12.12.14",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-eslint-plugin": "^2.1.0",
+    "@loopback/build": "^3.1.1",
+    "@loopback/eslint-config": "^5.0.3",
+    "@loopback/testlab": "^1.10.3",
+    "@types/node": "^13.7.6",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-eslint-plugin": "^2.2.1",
     "eslint-plugin-mocha": "^6.2.2",
-    "typescript": "^3.7.3"
+    "source-map-support": "^0.5.16",
+    "typescript": "^3.8.2"
   }
 }
