--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "hrservice",
+  "name": "hr-service",
   "version": "1.0.0",
-  "description": "This is my hr service project",
-  "installConfig": {
-    "pnp": false
-  },
+  "description": "This is the Hr Service API.",
   "keywords": [
     "loopback-application",
     "loopback"
@@ -28,6 +25,8 @@
     "test": "lb-mocha --allow-console-logs \"dist/__tests__\"",
     "posttest": "npm run lint",
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
+    "docker:build": "docker build -t hr-service .",
+    "docker:run": "docker run -p 3000:3000 -d hr-service",
     "migrate": "node ./dist/migrate",
     "prestart": "npm run build",
     "start": "node -r source-map-support/register .",
@@ -37,7 +36,7 @@
     "type": "git"
   },
   "author": "",
-  "license": "MIT",
+  "license": "",
   "files": [
     "README.md",
     "index.js",
@@ -58,16 +57,16 @@
   },
   "devDependencies": {
     "@loopback/build": "^3.1.1",
-    "@loopback/eslint-config": "^5.0.3",
+    "source-map-support": "^0.5.16",
     "@loopback/testlab": "^1.10.3",
-    "@types/node": "^13.7.6",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@types/node": "^10.17.14",
     "@typescript-eslint/parser": "^2.19.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@loopback/eslint-config": "^5.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-eslint-plugin": "^2.2.1",
     "eslint-plugin-mocha": "^6.2.2",
-    "source-map-support": "^0.5.16",
-    "typescript": "^3.8.2"
+    "typescript": "~3.7.5"
   }
 }
