--- a/package.json
+++ b/package.json
@@ -46,27 +46,27 @@
     "!*/__tests__"
   ],
   "dependencies": {
-    "@loopback/boot": "^2.3.1",
-    "@loopback/context": "^3.8.1",
-    "@loopback/core": "^2.7.0",
-    "@loopback/openapi-v3": "^3.4.1",
-    "@loopback/repository": "^2.5.1",
-    "@loopback/rest": "^5.0.1",
-    "@loopback/rest-explorer": "^2.2.2",
-    "@loopback/service-proxy": "^2.3.0"
+    "@loopback/boot": "*",
+    "@loopback/context": "*",
+    "@loopback/core": "*",
+    "@loopback/openapi-v3": "*",
+    "@loopback/repository": "*",
+    "@loopback/rest": "*",
+    "@loopback/rest-explorer": "*",
+    "@loopback/service-proxy": "*"
   },
   "devDependencies": {
-    "@loopback/build": "^5.4.1",
-    "@loopback/eslint-config": "^7.0.1",
-    "@loopback/testlab": "^3.1.5",
-    "@types/node": "^12.12.6",
-    "@typescript-eslint/parser": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "eslint": "^7.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-eslint-plugin": "^2.2.1",
-    "eslint-plugin-mocha": "^7.0.0",
-    "source-map-support": "^0.5.19",
-    "typescript": "~3.9.3"
+    "@loopback/build": "*",
+    "@loopback/eslint-config": "*",
+    "@loopback/testlab": "*",
+    "@types/node": "*",
+    "@typescript-eslint/eslint-plugin": "*",
+    "@typescript-eslint/parser": "*",
+    "eslint": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-eslint-plugin": "*",
+    "eslint-plugin-mocha": "*",
+    "source-map-support": "*",
+    "typescript": "*"
   }
 }
