--- a/package.json
+++ b/package.json
@@ -46,27 +46,27 @@
     "!*/__tests__"
   ],
   "dependencies": {
-    "@loopback/boot": "*",
-    "@loopback/context": "*",
-    "@loopback/core": "*",
-    "@loopback/openapi-v3": "*",
-    "@loopback/repository": "*",
-    "@loopback/rest": "*",
-    "@loopback/rest-explorer": "*",
-    "@loopback/service-proxy": "*"
+    "@loopback/boot": "^3.0.2",
+    "@loopback/context": "^3.12.0",
+    "@loopback/core": "^2.11.0",
+    "@loopback/openapi-v3": "^5.0.0",
+    "@loopback/repository": "^3.1.0",
+    "@loopback/rest": "^8.0.0",
+    "@loopback/rest-explorer": "^3.0.2",
+    "@loopback/service-proxy": "^3.0.2"
   },
   "devDependencies": {
-    "@loopback/build": "*",
-    "@loopback/eslint-config": "*",
-    "@loopback/testlab": "*",
-    "@types/node": "*",
-    "@typescript-eslint/eslint-plugin": "*",
-    "@typescript-eslint/parser": "*",
-    "eslint": "*",
-    "eslint-config-prettier": "*",
-    "eslint-plugin-eslint-plugin": "*",
-    "eslint-plugin-mocha": "*",
+    "@loopback/build": "^6.2.5",
+    "@loopback/eslint-config": "^10.0.1",
+    "@loopback/testlab": "^3.2.7",
+    "@types/node": "^14.11.10",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-eslint-plugin": "^2.3.0",
+    "eslint-plugin-mocha": "^8.0.0",
     "source-map-support": "*",
-    "typescript": "*"
+    "typescript": "^4.0.3"
   }
 }
