--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,12 @@
 # See here for image contents: https://github.com/microsoft/vscode-dev-containers/tree/v0.154.0/containers/typescript-node/.devcontainer/base.Dockerfile
 
 # [Choice] Node.js version: 14, 12, 10
-ARG VARIANT="14-buster"
-FROM mcr.microsoft.com/vscode/devcontainers/typescript-node:0-${VARIANT}
+# ARG VARIANT="14-buster"
+# FROM mcr.microsoft.com/vscode/devcontainers/typescript-node:0-${VARIANT}
+
+FROM node:lts-alpine
+
+RUN npm -g install typescript
 
 RUN yarn install && yarn upgrade
 
